--- a/4.html
+++ b/4.html
@@ -19,6 +19,7 @@
     <script>
         let a = document.getElementById("hel").getElementsByTagName("*").length;
         console.log(a)
+        document.write(a)
     </script>
 </body>
 </html>
